--- a/config/log4r.yml
+++ b/config/log4r.yml
@@ -24,6 +24,15 @@ log4r_config:
         - logfile
         - chainsaw
 
+    - name: reserve_line_items
+      level: DEBUG
+      additive: 'false'
+      trace: 'false'
+      outputters:
+        - stdout
+        - logfile
+        - chainsaw
+
   # outputters and formatters
   outputters:
   - type: StderrOutputter
