--- a/config/log4r.yml
+++ b/config/log4r.yml
@@ -33,6 +33,15 @@ log4r_config:
         - logfile
         - chainsaw
 
+    - name: rake_line_items
+      level: DEBUG
+      additive: 'false'
+      trace: 'false'
+      outputters:
+        - stdout
+        - logfile
+        - chainsaw
+
   # outputters and formatters
   outputters:
   - type: StderrOutputter
